Height fix on cards on mobileview

--- a/app/main.css
+++ b/app/main.css
@@ -495,7 +495,7 @@ a:visited {
 
 @media screen and (min-width: 450px) and (max-width: 750px) {
   .movie-list {
-    height: 500px;
+    height: 550px;
     grid-template-columns:  1fr 1fr;
     overflow: scroll;
   }
